# hgscale

common/: Cargo.toml
common/src/: lib.rs
shard/: Cargo.toml
shard/src/: main.rs
